# temporal-db

./: .gitignore  Cargo.toml  README.md
examples/: test_compression.rs
src/: db.rs  error.rs  lib.rs  main.rs
src/api/: grpc.rs  mod.rs  rest.rs
src/cli/: commands.rs  mod.rs
src/core/: event.rs  mod.rs  temporal.rs  timeline.rs
src/crdt/: mod.rs  resolver.rs  types.rs
src/distributed/: gossip.rs  mod.rs  raft.rs  sharding.rs
src/index/: bitmap.rs  mod.rs  temporal.rs
src/query/: executor.rs  mod.rs  optimizer.rs  parser.rs
src/storage/: journal.rs  materialized_view.rs  mod.rs  segment.rs  segment_file.rs  segment_journal.rs  wal.rs
